...
    
    // MARK: - didTapLogoutButton
    func didTapLogoutButton() {
        let alert = AlertModel(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            buttonText: "Да",
            cancelButtonText: "Нет"
        ) {
            ProfileLogoutService.shared.logout()
        }
        
        view?.alertPresenter.callAlert(with: alert)
...
