...
        button.setTitle("Войти", for: .normal)
        button.backgroundColor = AppColorSettings.ypWhite
        button.setTitleColor(AppColorSettings.backgroundColor, for: .normal)
        button.layer.cornerRadius = 16
        button.layer.masksToBounds = true
        
        button.accessibilityIdentifier = "Authenticate"
        
        return button
    }()
    
    // MARK: INIT
    override init(frame: CGRect) {
...
